# The-Junk-Drawer

./: Cargo.toml  README.md
core/: Cargo.toml  sailfish.yml
core/src/: config.rs  lib.rs  main.rs  router.rs  routes.rs  runner.rs  server.rs
core/src/assist/: Cargo.toml
core/src/assist/assist_derive/: Cargo.toml
core/src/assist/assist_derive/src/: lib.rs
core/src/assist/src/: lib.rs
core/src/libs/routing_auto_config_derive/: Cargo.toml
core/src/libs/routing_auto_config_derive/src/: lib.rs
core/src/models/: mod.rs
core/src/routes/: html.rs  mod.rs
core/src/views/: mod.rs
core/src/views/admin/: index.rs  mod.rs  template.stpl
core/src/views/admin/entities/: index.rs  mod.rs  template.stpl
core/src/views/admin/entity_types/: mod.rs  template.stpl
core/src/views/admin/fields/: mod.rs  template.stpl
core/tests/: core.rs
templates/: hello.stpl
views/: Cargo.toml
views/src/: lib.rs
views/src/templates/: details.rs  index.rs  map.rs  mod.rs
