[package]
name = "core"
version = "0.1.0"
authors = ["jacob"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3"
config = "0.10.1"
serde = { version = "1", features = ["derive"]}
tracing = "0.1.22"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
sailfish = "0.3.2"

[dev-dependencies]
lazy_static = "1.4.0"
reqwest = "0.10"
tokio = "0.2.24"
